# AI_special

hw01/: hw01_heejun_Jung_20204065.docx  inference_cpu.py  main.py  mnist_to_pt.py  time.xlsx
hw01/checkpoint/: fc_256.pt
hw01/config/: config_FC.py
hw01/estimators/: intrinsic_dimensionality.py
hw01/model/: FC.py
hw02/: CMakeLists.txt  main_add.cpp  main_mm.cpp  main_mv.cpp  main_reduce.cpp  main_softmax.cpp
hw02/include/: add.h  mm.h  mv.h  reduce.h  softmax.h  tensor.h  utils.h
hw02/src/add/: add_cuda.cu  add_cuda_wrapper.cpp  add_reference.cpp
hw02/src/mm/: mm_cuda.cu  mm_cuda_wrapper.cpp  mm_reference.cpp
hw02/src/mv/: mv_cuda.cu  mv_cuda_wrapper.cpp  mv_reference.cpp
hw02/src/reduce/: reduce_cuda.cu  reduce_cuda_wrapper.cpp  reduce_reference.cpp
hw02/src/softmax/: softmax_cuda.cu  softmax_cuda_wrapper.cpp  softmax_reference.cpp
hw03/: HW03_weight_quantization_20204065_Heejun_Jung.docx  result.xlsx
hw03/quantization/: README.md  grid_main_cifar10.py  grid_main_qcifar10.py  main_direct_quantization.py  main_qresnet_cifar10.py  main_resnet_cifar10.py
hw03/quantization/config/: config_FC.py
hw03/quantization/model/: grid_args.py  quantize.py  resnet.py
